syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

package airport;

service CheckInService {
  rpc FetchCounter(google.protobuf.StringValue) returns(FetchCounterResponse);
  rpc PassengerCheckIn(PassengerCheckInRequest) returns(PassengerCheckInResponse);
  rpc PassengerStatus(google.protobuf.StringValue) returns(PassengerStatusResponse);
}

message FetchCounterResponse {
  string flightCode = 1;
  string airlineName = 2;
  repeated int32 counters = 3;
  string sectorName = 4;
  int32 peopleAmountInLine = 5;
}

message PassengerCheckInRequest {
  string booking = 1;
  string sectorName = 2;
  int32 firstCounter = 3;
}

message PassengerCheckInResponse {
  string flight = 1;
  string airline = 2;
  int32 lastCounter = 3;
  int32 peopleInLIne = 4;
}

message PassengerStatusResponse {
  bool isCheckingIn = 1;
  bool isCheckedIn = 2;
  string flightCode = 3;
  string airlineName = 4;
  int32 counterOfCheckIn = 5;
  repeated int32 countersForCheckingIn = 6;
  string sectorName = 7;
  int32 peopleAmountInLine = 8;
}
